// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollButton should render properly with some props assigned 1`] = `
<a
  className="Button secondary fullWidth"
  onClick={[Function]}
  tabIndex={0}
>
  <span>
    Test
  </span>
</a>
`;

exports[`ScrollButton should render with just required props passed 1`] = `
<a
  className="Button primary"
  onClick={[Function]}
  tabIndex={0}
>
  <span>
    Test
  </span>
</a>
`;
